The timeout is in milliseconds, not in hz.  Only the portion of the patch that converts ms to ticks was used.  Another PR states that a return code of 0 is the right one for libusb.

Submitted by: Lonnie Mendez
PR: 94311
Approved by: re (blanket)